[metadata]
name = GrabPay-Client
version = 0.0.1
author = ocDev
author_email = yosephoche@gmail.com
description = GrabPay Client Package
long_description = file: README.md
long_description_content = text/markdown
url = https://github.com/yosephoche/grabpay-client
project_urls =
    Bug Tracker = https://github.com/yosephoche/grabpay-client/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src